--- a/style.css
+++ b/style.css
@@ -1,3 +1,34 @@
 body {
-color: darkgrey;
+color: yellow;
+}
+.cont{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-areas: 
+    "a a a a"
+    "b c c c"
+    "b c c c"
+    "b d d d";
+    width: 100%;
+    height: 100%;
+}
+.header{
+    grid-area: a;
+    background: royalblue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.sidebar{
+    grid-area: b;
+    background: silver;
+}
+.main{
+    grid-area: c;
+    background: salmon;
+}
+.footer{
+    grid-area: d;
+    background: seagreen;
 }
