--- a/villagers/Hopper/style.css
+++ b/villagers/Hopper/style.css
@@ -8,7 +8,7 @@
     100%{background: rgb(238, 186, 88);}
 }
 @font-face {   font-family: 'BalsamiqSans-Regular';   
-    src: url('Font/BalsamiqSans-Regular.ttf') format('truetype'); 
+    src: url('../../Font/BalsamiqSans-Regular.ttf') format('truetype'); 
 }
 .cont{
     display: grid;
@@ -41,7 +41,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    justify-content: space-around;
     border: solid 5px brown;
 }
 .footer{
@@ -52,7 +52,13 @@
     align-items: center;
     border: solid 5px brown;
 }
-
+h1{
+    font-size: 50px;
+    color: yellow;
+}
+.obrazek_vlg{
+    height: 500px;
+}
 
 
 }
@@ -88,6 +94,7 @@
 }
 .kwadrat:hover .ty{
     display: block;
+    animation: animacja3 2s 1;
     color: black;
 }
 .kwadrat:hover{
