--- a/buildings/style.css
+++ b/buildings/style.css
@@ -8,7 +8,7 @@
     100%{background: rgb(238, 186, 88);}
 }
 @font-face {   font-family: 'BalsamiqSans-Regular';   
-    src: url('../../Font/BalsamiqSans-Regular.ttf') format('truetype'); 
+    src: url('../Font/BalsamiqSans-Regular.ttf') format('truetype'); 
 }
 .cont{
     display: grid;
@@ -59,7 +59,6 @@ h1{
     font-size: 50px;
     color: yellow;
 }
-
 
 }
 .menu {
