--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@
     justify-content: flex-start;
     align-items: center;
     border: solid 5px brown;
+    position: relative;
 }
 
 
@@ -76,7 +77,7 @@
     position: absolute;
     width: 65px;
     height: 170px;
-    background: white;
+    background: rgb(238, 186, 88);
     left: 120px;
     flex-direction: column;
 }
@@ -93,4 +94,31 @@
 .kwadrat:hover{
     animation: menu_animacja 1s 1;
     background: rgb(238, 186, 88);
+}
+/*Gra w footerze*/
+@keyframes biedronka{
+    0%{right: 20px;}
+    50%{right: 1450px;}
+    100%{right: 20px;}
+}
+.red{
+    color: purple;
+    font-size: 30px;
+}
+.bobgif{
+    display: none;
+    height: 300px;
+}
+.lady{
+    position: absolute;
+    height: 50px;
+    bottom: 100px;
+    transform: rotate(90deg);
+    animation: biedronka 2s infinite;
+}
+.lady:hover + .bobgif{
+    display: block;
+}
+.lady:hover{
+    animation-play-state: paused;
 }
